# vlcb-defs-rs

./: .editorconfig  .gitmodules  Cargo.toml  Makefile  README.md
codegen/: .gitignore  Gemfile  Makefile  definition.yaml  extract_opcodes.rb  libgen.rb  main.rb  migrate_from_csv.sh  opcodes.yaml  schema.rb  template.rb
codegen/lang/rust/: generator.rb
codegen/lang/rust/formatter/: Cargo.toml  format.rs
codegen/lang/rust/templates/: annotations.erb  comment.erb  doc_comment.erb  docblok.erb  enum.erb  flags.erb  imports.erb  repr.erb
docs/opcode/: acdat.md  ack.md  acof.md  acof1.md  acof2.md  acof3.md  acon.md  acon1.md  acon2.md  acon3.md  aloc.md  ardat.md  areq.md  arof.md  arof1.md  arof2.md  arof3.md  aron.md  aron1.md  aron2.md  aron3.md  arsof.md  arsof1.md  arsof2.md  arsof3.md  arson.md  arson1.md  arson2.md  arson3.md  arst.md  asof.md  asof1.md  asof2.md  asof3.md  ason.md  ason1.md  ason2.md  ason3.md  asrq.md  bon.md  (+102 more)
src/: dcc.rs  generated.rs  lib.rs  module.rs  platform.rs  vlcb.rs
