[dependencies]
bitflags = "2.5.0"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = []

[dependencies.num_enum]
version = "0.7"
default-features = false

[dependencies.defmt]
version = "0.3"
optional = true

[package]
name = "vlcb-defs"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.71.0"
documentation = "https://docs.rs/vlcb-defs"
homepage = "https://github.com/0xfrej/vlcb-defs-rs"
repository = "https://github.com/0xfrej/vlcb-defs-rs"
license = "Apache-2"
authors = [ "Freja <me@freja.codes>" ]
keywords = [ "lcb", "vlcb", "cbus", "merg" ]
exclude = [ "/codegen", "/Makefile", "/defs" ]

[features]
defmt = [ "dep:defmt" ]
